// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Sidebar rendering tests open false - test 1`] = `
<div>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <div
      class="flex flex-col gap-2 p-2"
      data-sidebar="header"
      data-slot="sidebar-header"
      data-testid="sidebar-header"
    >
      <div
        class="flex items-center justify-center py-1"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 shrink-0 cursor-pointer"
          data-sidebar="trigger"
          data-slot="sidebar-trigger"
          data-testid="sidebar-trigger"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-panel-left"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M9 3v18"
            />
          </svg>
          <span
            class="sr-only"
          >
            Toggle Sidebar
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidebar rendering tests open true - test 1`] = `
<div>
  <div
    class="group/sidebar-wrapper has-data-[variant=inset]:bg-sidebar flex min-h-svh w-full"
    data-slot="sidebar-wrapper"
    style="--sidebar-width: 16rem; --sidebar-width-icon: 3rem;"
  >
    <div
      class="flex flex-col gap-2 p-2"
      data-sidebar="header"
      data-slot="sidebar-header"
      data-testid="sidebar-header"
    >
      <div
        class="flex items-center justify-between gap-2 px-1 py-1"
      >
        <a
          class="flex min-w-0 items-center gap-2"
          data-testid="home-link"
          href="/"
        >
          <span
            class="truncate text-lg font-bold"
          >
            Vision Notes
          </span>
        </a>
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-7 shrink-0 cursor-pointer"
          data-sidebar="trigger"
          data-slot="sidebar-trigger"
          data-testid="sidebar-trigger"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-panel-left"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="3"
            />
            <path
              d="M9 3v18"
            />
          </svg>
          <span
            class="sr-only"
          >
            Toggle Sidebar
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
